--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "systemis-client",
+  "name": "vite-2.9.2-regression",
   "version": "1.3.3",
   "scripts": {
     "dev": "vite",
@@ -11,12 +11,9 @@
     "check-types": "tsc -w --noEmit"
   },
   "dependencies": {
-    "@vitejs/plugin-vue": "2.0.1",
+    "@vitejs/plugin-vue": "2.3.1",
     "@vuelidate/core": "^2.0.0-alpha.14",
     "@vuelidate/validators": "^2.0.0-alpha.13",
-    "@vueuse/core": "^7.2.2",
-    "@vueuse/integrations": "^7.2.2",
-    "@vueuse/router": "^7.2.2",
     "chart.js": "^3.6.2",
     "core-js": "^3.19.3",
     "devextreme": "^21.2.4",
@@ -28,22 +25,16 @@
     "primevue": "^3.10.0",
     "prismjs": "^1.15.0",
     "universal-cookie": "^4.0.4",
-    "vite": "2.7.3",
-    "vite-plugin-checker": "^0.3.4",
+    "vite": "2.9.4",
+    "vite-plugin-checker": "^0.4.5",
     "vite-plugin-eslint": "^1.3.0",
     "vue": "^3.2.24",
-    "vue-router": "^4.0.12",
-    "vue-tsc": "^0.3.0",
+    "vue-tsc": "^0.34.6",
     "vue-word-highlighter": "^1.0.4",
-    "vuedraggable": "^4.1.0",
-    "@vicons/fa": "^0.11.0",
+    "@vicons/fa": "^0.12.0",
     "@vicons/utils": "^0.1.4"
   },
   "devDependencies": {
-    "@types/jest": "^27.0.3",
-    "@types/lodash": "4.14.178",
-    "@types/prismjs": "^1.16.5",
-    "@vue/compiler-sfc": "^3.2.24",
     "@vue/eslint-config-airbnb": "^6.0.0",
     "@vue/eslint-config-typescript": "^9.0.0",
     "sass": "^1.44.0",
