--- a/package.json
+++ b/package.json
@@ -1,14 +1,8 @@
 {
-  "name": "vite-2.9.2-regression",
-  "version": "1.3.3",
+  "name": "vite-regression-playground",
+  "version": "",
   "scripts": {
-    "dev": "vite",
-    "build-sass": "sass public/assets --no-source-map",
-    "build": "npm run build-sass && vue-tsc --noEmit && vite build",
-    "build2": "npm run build-sass && vue-tsc --noEmit && vite build -m development",
-    "serve": "vite preview --port 8888",
-    "watch": "sass --watch public/assets --no-source-map",
-    "check-types": "tsc -w --noEmit"
+    "dev": "vite"
   },
   "dependencies": {
     "@vitejs/plugin-vue": "2.3.1",
@@ -25,7 +19,7 @@
     "primevue": "^3.10.0",
     "prismjs": "^1.15.0",
     "universal-cookie": "^4.0.4",
-    "vite": "2.9.1",
+    "vite": "2.9.2",
     "vite-plugin-checker": "^0.4.5",
     "vite-plugin-eslint": "^1.3.0",
     "vue": "^3.2.24",
