--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "universal-cookie": "^4.0.4",
     "vite": "2.9.5",
     "vite-plugin-checker": "^0.4.5",
-    "vite-plugin-eslint": "^1.3.0",
+    "vite-plugin-eslint": "1.4.0",
     "vue": "^3.2.24",
     "vue-tsc": "^0.34.6",
     "vue-word-highlighter": "^1.0.4",
