--- a/package.json
+++ b/package.json
@@ -7,32 +7,60 @@
     "build": "npm run build-sass && vue-tsc --noEmit && vite build"
   },
   "dependencies": {
-    "@vitejs/plugin-vue": "2.3.1",
-    "@vuelidate/core": "^2.0.0-alpha.14",
-    "@vuelidate/validators": "^2.0.0-alpha.13",
-    "chart.js": "^3.6.2",
-    "core-js": "^3.19.3",
+    "@codemirror/autocomplete": "^0.19.12",
+    "@codemirror/basic-setup": "^0.19.1",
+    "@codemirror/gutter": "^0.19.9",
+    "@codemirror/lang-javascript": "^0.19.7",
+    "@codemirror/legacy-modes": "^0.19.0",
+    "@codemirror/stream-parser": "^0.19.5",
+    "@microsoft/signalr": "^6.0.1",
+    "@types/node": "^17.0.12",
+    "@vicons/antd": "^0.12.0",
+    "@vicons/carbon": "^0.12.0",
+    "@vicons/fa": "^0.12.0",
+    "@vicons/fluent": "^0.12.0",
+    "@vicons/ionicons5": "^0.12.0",
+    "@vicons/material": "^0.12.0",
+    "@vicons/utils": "^0.1.4",
+    "@vitejs/plugin-vue": "^2.1.0",
+    "@vueuse/core": "^8.0.1",
+    "@vueuse/integrations": "^8.0.1",
+    "@vueuse/router": "^8.0.1",
+    "chart.js": "^3.7.0",
+    "core-js": "^3.20.0",
+    "detect-browser": "^5.3.0",
     "devextreme": "^21.2.4",
     "devextreme-aspnet-data-nojquery": "^2.8.4",
     "devextreme-vue": "^21.2.4",
+    "jwt-decode": "^3.1.2",
     "lodash": "^4.17.21",
     "primeflex": "^3.0.0",
     "primeicons": "^5.0.0",
     "primevue": "^3.10.0",
     "prismjs": "^1.15.0",
     "universal-cookie": "^4.0.4",
+    "vee-validate": "^4.5.10",
     "vite": "2.9.5",
-    "vite-plugin-checker": "^0.4.5",
-    "vite-plugin-eslint": "1.5.0",
+    "vite-plugin-eslint": "1.5.1",
     "vue": "^3.2.24",
-    "vue-tsc": "^0.34.6",
+    "vue-router": "^4.0.12",
+    "vue-tsc": "^0.34.3",
     "vue-word-highlighter": "^1.0.4",
-    "@vicons/fa": "^0.12.0",
-    "@vicons/utils": "^0.1.4"
+    "vue3-popper": "^1.4.1",
+    "vuedraggable": "^4.1.0",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
+    "@types/jest": "^27.0.3",
+    "@types/lodash": "^4.14.180",
+    "@types/prismjs": "^1.16.5",
+    "@vue/compiler-sfc": "^3.2.24",
     "@vue/eslint-config-airbnb": "^6.0.0",
+    "@vue/eslint-config-prettier": "^7.0.0",
     "@vue/eslint-config-typescript": "^10.0.0",
+    "cypress": "^9.5.3",
+    "eslint": "^8.13.0",
+    "eslint-config-standard": "^17.0.0",
     "sass": "^1.44.0",
     "typescript": "^4.4.3"
   }
