--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
     "build": "npm run build-sass && vue-tsc --noEmit && vite build"
   },
   "dependencies": {
-    "@codemirror/autocomplete": "^0.20.0",
+    
+    "@microsoft/signalr": "^6.0.1","@codemirror/autocomplete": "^0.20.0",
     "@codemirror/basic-setup": "^0.20.0",
-    "@codemirror/lang-javascript": "^0.20.0",
+    "@codemirror/language": "^0.20.0",
     "@codemirror/legacy-modes": "^0.20.0",
-    "@microsoft/signalr": "^6.0.1",
     "@vicons/antd": "^0.12.0",
     "@vicons/carbon": "^0.12.0",
     "@vicons/fa": "^0.12.0",
