--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "dependencies": {
     
-    "@microsoft/signalr": "^6.0.1","@codemirror/autocomplete": "^0.20.0",
+    "@microsoft/signalr": "^6.0.1",
+    "@codemirror/autocomplete": "^0.20.0",
     "@codemirror/basic-setup": "^0.20.0",
     "@codemirror/language": "^0.20.0",
     "@codemirror/legacy-modes": "^0.20.0",
